various bug fixed, added game screen, updated openapi
